Fix Login text on smaller screens

--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -36,6 +36,9 @@
   .nav__logo {
     width: 250px;
   }
+  .nav {
+    margin-left: 0;
+  }
 }
 
 .subNav__menu {
